# HelloWorld

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
32bit/: CMakeLists.txt  Hello.asm  makeit.bat
64bit/: CMakeLists.txt  Hello.asm  makeit.bat  win64.inc  windows.inc
shared/: Hello.manifest  Hello.rc
